# Oya

./: .env.example  .gitignore  .jscpd.json  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTERPRISE.md  LICENSE  Makefile  README.md  SETUP.md  TODO.md  config.ini.example  docker-compose.yml  notes.md
.claude/agents/: code-reviewer.md
.github/: copilot-instructions.md
.kiro/hooks/: review-requirements-doc.kiro.hook  task-requirements-alignment.kiro.hook  vibe-coder-assistant.kiro.hook
.kiro/steering/: product.md  structure.md  tech.md
.oyawiki/: .oyaignore
backend/: .venv  Dockerfile  PROGRESS.md  README.md  pyproject.toml
backend/docs/plans/: 2026-01-26-stale-content-cleanup-design.md  2026-01-26-stale-content-cleanup.md
backend/src/oya/: __init__.py  config.py  main.py  state.py  workspace.py
backend/src/oya/api/: __init__.py  deps.py  schemas.py
backend/src/oya/api/routers/: jobs.py  logs.py  notes.py  qa.py  repos.py  repos_v2.py  search.py  wiki.py
backend/src/oya/config/: __init__.py  files.py  generation.py  search.py
backend/src/oya/constants/: __init__.py  files.py  generation.py  issues.py  llm.py  qa.py
backend/src/oya/data/: techstack.yaml
backend/src/oya/db/: __init__.py  code_index.py  connection.py  migrations.py  repo_registry.py
backend/src/oya/generation/: __init__.py  architecture.py  chunking.py  cleanup.py  deadcode.py  directory.py  file.py  frontmatter.py  graph_architecture.py  mermaid.py  mermaid_validator.py  metrics.py  orchestrator.py  overview.py  prompts.py  snippets.py  staging.py  summaries.py  synthesis.py  techstack.py  workflows.py
backend/src/oya/graph/: __init__.py  analysis.py  builder.py  models.py  persistence.py  query.py  resolver.py
backend/src/oya/indexing/: __init__.py  chunking.py  metadata.py  service.py
backend/src/oya/llm/: __init__.py  client.py
backend/src/oya/notes/: __init__.py  schemas.py  service.py
backend/src/oya/parsing/: __init__.py  base.py  decorator_patterns.py  fallback_parser.py  java_parser.py  models.py  python_parser.py  registry.py  typescript_parser.py
backend/src/oya/qa/: __init__.py  cgrag.py  classifier.py  graph_retrieval.py  ranking.py  schemas.py  service.py  session.py  source_fetcher.py
backend/src/oya/qa/retrieval/: __init__.py  analytical.py  diagnostic.py  exploratory.py
backend/src/oya/repo/: __init__.py  file_filter.py  git_operations.py  git_repo.py  repo_paths.py  url_parser.py
backend/src/oya/vectorstore/: __init__.py  issues.py  store.py
backend/tests/: __init__.py  conftest.py  test_analytical_retrieval.py  test_api_deps.py  test_architecture_generator.py  test_base_parser.py  test_call_site_synopsis_integration.py  test_cascade.py  test_cgrag.py  test_cgrag_integration.py  test_cgrag_prompts.py  test_cgrag_schemas.py  test_cgrag_session.py  test_chunking.py  test_code_index.py  test_config.py  test_db.py  test_db_cache_invalidation.py  test_db_reconnect.py  test_deadcode.py  test_decorator_patterns.py  test_diagnostic_retrieval.py  test_directory_generator.py  test_exploratory_retrieval.py  test_fallback_parser.py  test_file_filter.py  test_file_generator.py  test_git_repo.py  test_graph_analysis.py  test_graph_architecture.py  test_graph_architecture_integration.py  test_graph_builder.py  test_graph_integration.py  test_graph_models.py  test_graph_persistence.py  test_graph_qa_prompt.py  test_graph_query.py  test_graph_resolver.py  test_graph_retrieval.py  test_health.py  (+46 more)
backend/tests/api/: test_logs.py  test_repos_v2.py
backend/tests/db/: test_repo_registry.py
backend/tests/generation/: __init__.py  test_cleanup.py  test_frontmatter.py  test_orchestrator_frontmatter.py  test_snippets.py
backend/tests/parsing/: test_fallback_parser.py  test_models.py
backend/tests/repo/: __init__.py  test_git_operations.py  test_repo_paths.py  test_url_parser.py
docs/: jsonl-viewer.html
docs/language-customization/: README.md  extending-decorator-patterns.md
docs/notes/: ai-questions-feature.md  architecture-flaws-oya.json  build_costs.md  fe-design-flaws.md  fix-notes-system.md  generation-pipeline.md  improving-oya.md  phase-1-analysis.md  phase-2-files.md  phase-3-directories.md  phase-4-synthesis.md  phase-5-synthesis.md  phase-6-overview.md  phase-7-workflows.md  phase-8-indexing.md
docs/plans/: 2026-01-08-oya-v1-design.md  2026-01-08-oya-v1-implementation.md  2026-01-09-coretechs-to-oyawiki-rename-design.md  2026-01-13-qa-redesign-design.md  2026-01-13-qa-redesign-implementation.md  2026-01-14-config-extraction-design.md  2026-01-14-config-extraction.md  2026-01-14-directory-pages-redesign-design.md  2026-01-14-mermaid-diagrams.md  (+80 more)
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
prds/: oya-v1.md
(+102 files in other folders)
