[project]
name = "oya"
version = "0.1.0"
description = "Local-first editable wiki generator for codebases"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "chromadb>=0.4.22",
    "litellm>=1.17.0",
    "gitpython>=3.1.41",
    "tree-sitter>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-java>=0.21.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "hypothesis>=6.100.0",
    "mypy>=1.8.0",
    "pytest-cov>=4.1.0",
    "types-PyYAML>=6.0.0",
    "pylint>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oya"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:unclosed event loop:ResourceWarning",
    "ignore:unclosed.*socket:ResourceWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "PLC0415"]  # PLC0415: import should be at top-level

[tool.ruff.lint.per-file-ignores]
# Allow local imports in tests - common pattern for test isolation
# Also allow long lines in test docstrings and assertions
# TODO: Gradually clean up test files to use top-level imports
"tests/*" = ["PLC0415", "E501"]
# Prompt templates have intentionally long lines for readability
"src/oya/generation/prompts.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/oya"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pylint.main]
# Only check design issues (god objects), not style (ruff handles that)
disable = ["all"]
enable = ["R0902", "R0904"]  # too-many-instance-attributes, too-many-public-methods

[tool.pylint.design]
max-attributes = 10
max-public-methods = 15
